--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
         android:id="@+id/locText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/text_location"
         android:textAlignment="center"
-        android:text="@string/text_location" />
+        android:visibility="invisible" />
 
     <org.osmdroid.views.MapView
         android:id="@+id/map"
