New feature: Determine location using WiFi

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,5 +4,6 @@
         <item>IP</item>
         <item>BTS</item>
         <item>GPS</item>
+        <item>WiFi</item>
     </string-array>
 </resources>
