--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="transparent_black">#99000000</color>
+
     <color name="primary_900">#db6200</color>
     <color name="primary_800">#dc8000</color>
     <color name="primary_700">#dd9000</color>
